WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75965
REGRESSION (
r104174
): 500+ tests failing on Windows
https://bugs.webkit.org/show_bug.cgi?id=75965
Summary
REGRESSION (r104174): 500+ tests failing on Windows
Adam Roben (:aroben)
Reported
2012-01-10 08:12:44 PST
Ever since
r104174
, 500+ tests have been failing on Windows. Here's an example test run:
http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r104486%20(19677)/results.html
My guess is that the scale factor is not getting reset between tests or something.
Attachments
Patch
(1.38 KB, patch)
2016-06-06 03:28 PDT
,
Per Arne Vollan
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-01-10 08:12:59 PST
<
rdar://problem/10669185
>
Adam Roben (:aroben)
Comment 2
2012-01-10 08:15:36 PST
Mac DRT does a few things to reset zooming/scaling between each test:
http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/mac/DumpRenderTree.mm?rev=104360#L1202
Win DRT doesn't do all the same things:
http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/win/DumpRenderTree.cpp?rev=104360#L900
Fady Samuel
Comment 3
2012-01-10 08:58:53 PST
(In reply to
comment #2
)
> Mac DRT does a few things to reset zooming/scaling between each test: > >
http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/mac/DumpRenderTree.mm?rev=104360#L1202
> > Win DRT doesn't do all the same things: > >
http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/win/DumpRenderTree.cpp?rev=104360#L900
Sorry, I didn't realize this was needed. I didn't see the issue on chromium platforms. I don't have access to a Mac at the moment to do some testing but I can look into this later tonight, if you don't have the cycles to fix it/investigate it yourself.
Adele Peterson
Comment 4
2012-03-02 11:20:46 PST
Any update on this?
Per Arne Vollan
Comment 5
2016-06-06 03:28:56 PDT
Created
attachment 280591
[details]
Patch
Michael Catanzaro
Comment 6
2016-06-06 09:38:57 PDT
Comment on
attachment 280591
[details]
Patch Are you planning to update expectations after landing this?
Per Arne Vollan
Comment 7
2016-06-06 11:41:03 PDT
(In reply to
comment #6
)
> Comment on
attachment 280591
[details]
> Patch > > Are you planning to update expectations after landing this?
Yes, I had planned to update expectations, but I couldn't find any skipped page scale tests. I will have a second look. Thanks for reviewing!
Per Arne Vollan
Comment 8
2016-06-06 12:17:49 PDT
Committed
r201720
: <
https://trac.webkit.org/changeset/201720
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug