REGRESSION (r104174): 500+ tests failing on Windows https://bugs.webkit.org/show_bug.cgi?id=75965

Reviewed by Michael Catanzaro.

Reset WebView scale factors before running next test.

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebViewToConsistentStateBeforeTesting):


Canonical link: https://commits.webkit.org/176506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201720 268f45cc-cd09-0410-ab3c-d52691b4dbfc